--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     
 
-    <div class="row time-block" id="H9">
+    <div class="row time-block" id="Hour 9">
       <div class="hour col-sm-1">
       9AM
       </div>
@@ -34,15 +34,15 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></i></span></button>
     </div>
 
-    <div class="row time-block" id="H10">
+    <div class="row time-block" id="Hour 10">
       <div class="hour col-sm-1">
-        10AM
+      10AM
       </div>
         <textarea class="col-sm-10 description" data-hour="10"></textarea>
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H11">
+    <div class="row time-block" id="Hour 11">
       <div class="hour col-sm-1">
       11AM
       </div>
@@ -50,7 +50,7 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H12">
+    <div class="row time-block" id="Hour 12">
       <div class="hour col-sm-1">
       12PM
       </div>
@@ -58,7 +58,7 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H13">
+    <div class="row time-block" id="Hour 13">
       <div class="hour col-sm-1">
       1PM
       </div>
@@ -66,7 +66,7 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H14">
+    <div class="row time-block" id="Hour 14">
       <div class="hour col-sm-1">
       2PM
       </div>
@@ -74,7 +74,7 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H15">
+    <div class="row time-block" id="Hour 15">
       <div class="hour col-sm-1">
       3PM
       </div>
@@ -82,7 +82,7 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H16">
+    <div class="row time-block" id="Hour 16">
       <div class="hour col-sm-1">
       4PM
       </div>
@@ -90,7 +90,7 @@
          <button class="col-sm-1 btn saveBtn"><span class="fas fa-save"></span></button>
     </div>
 
-    <div class="row time-block" id="H17">
+    <div class="row time-block" id="Hour 17">
       <div class="hour col-sm-1">
       5PM
       </div>
@@ -103,7 +103,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./Develop/javascript.js"></script>
+    <script src="./Develop/script.js"></script>
   </body>
 
 </html>
